--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.0",
+    "@truffle/hdwallet-provider": "^2.0.3",
     "ganache-time-traveler": "^1.0.16",
     "web3": "1.2.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "truffle test",
     "deploy": "truffle migrate --reset"
